--- a/src/components/atoms/ThemeIcon.astro
+++ b/src/components/atoms/ThemeIcon.astro
@@ -1,70 +1,74 @@
 ---
+
 ---
 
 <script>
+  const theme = (() => {
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme");
+    }
+    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+      return "dark";
+    }
+    return "light";
+  })();
 
-	const theme = (() => {
-		if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-			return localStorage.getItem("theme");
-		}
-		if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-			return "dark";
-		}
-		return "light";
-	})();
+  if (theme === "light") {
+    document.documentElement.classList.remove("dark");
+  } else {
+    document.documentElement.classList.add("dark");
+  }
 
-	if (theme === "light") {
-		document.documentElement.classList.remove("dark");
-	} else {
-		document.documentElement.classList.add("dark");
-	}
+  window.localStorage.setItem("theme", theme);
 
-	window.localStorage.setItem("theme", theme);
+  const handleToggleClick = () => {
+    const element = document.documentElement;
+    element.classList.toggle("dark");
 
-	const handleToggleClick = () => {
-		const element = document.documentElement;
-		element.classList.toggle("dark");
+    const isDark = element.classList.contains("dark");
+    localStorage.setItem("theme", isDark ? "dark" : "light");
+  };
 
-		const isDark = element.classList.contains("dark");
-		localStorage.setItem("theme", isDark ? "dark" : "light");
-	};
-
-	document.getElementById("themeToggle")
-		.addEventListener("click", handleToggleClick);
-
+  document
+    .getElementById("themeToggle")
+    .addEventListener("click", handleToggleClick);
 </script>
 
 <button id="themeToggle" class="fixed top-[92%] left-5 z-20">
-	<iconify-icon
-		class="sun"
-		icon="ant-design:sun-filled"
-		width="28"
-		height="28"
-		style="color: #38489b"></iconify-icon>
-	<iconify-icon
-		class="moon"
-		icon="line-md:moon-loop"
-		width="27"
-		height="27"
-		style="color: #00ffff"></iconify-icon>
+  <iconify-icon
+    class="sun"
+    icon="ant-design:sun-filled"
+    width="28"
+    height="28"
+    style="color: #38489b"></iconify-icon>
+  <iconify-icon
+    class="moon"
+    icon="line-md:moon-loop"
+    width="27"
+    height="27"
+    style="color: #00ffff"></iconify-icon>
 </button>
 
-<style >
-	#themeToggle {
-		border: 0;
-		background: none;
-	}
-	.sun {
-		display:block
-	}
-	.moon {
-		display:none;
-	}
+<style>
+  #themeToggle {
+    border: 0;
+    background: none;
+    position: fixed;
+    top: 90%;
+    left: calc(90% - 10px);
+    z-index: 30;
+  }
+  .sun {
+    display: block;
+  }
+  .moon {
+    display: none;
+  }
 
-	:global(.dark) .sun {
-		display: none;
-	}
-	:global(.dark) .moon {
-    display:block;
-	}
+  :global(.dark) .sun {
+    display: none;
+  }
+  :global(.dark) .moon {
+    display: block;
+  }
 </style>
