--- a/src/components/molecules/Header/Header.astro
+++ b/src/components/molecules/Header/Header.astro
@@ -1,13 +1,20 @@
 ---
 import { menuData } from "@src/data/menuData";
-import  getUserInfo from "@controllers/getUserData";
-
-
+import getUserInfo from "@controllers/getUserData";
 ---
 
+
+<script>
+import "@controllers/hamburger.js";
+</script>
+
 <header class="header">
-  <div class="header__container">
-    <img class="header__logo" src={getUserInfo.logo} alt={`lgoo de ${getUserInfo.userName}`} />
+  <div class="header__container blur">
+    <img
+      class="header__logo"
+      src={getUserInfo.logo}
+      alt={`lgoo de ${getUserInfo.userName}`}
+    />
     <nav class="header__menu">
       <ul class="header__list">
         {
@@ -21,5 +28,10 @@ import  getUserInfo from "@controllers/getUserData";
         }
       </ul>
     </nav>
+    <button class="hamburger hamburger--collapse" type="button">
+      <span class="hamburger-box">
+        <span class="hamburger-inner"></span>
+      </span>
+    </button>
   </div>
 </header>
