--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import ThemeIcon from "@src/components/atoms/ThemeIcon.astro";
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import Header from "@src/components/molecules/Header/Header.astro";
 ---
 
 <html lang="en">
@@ -12,9 +13,18 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
   </head>
   <body>
     <ThemeIcon />
-
+    <Header/>
     <main>
       <slot />
     </main>
   </body>
 </html>
+
+
+<style type="sass">
+  main{
+
+    padding-top:4rem ;
+  }
+
+</style>
