--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,12 @@
 import BackgroundGradient from "@src/layouts/BackgroundGradient/BackgroundGradient.astro";
 import Layout from "../layouts/Layout.astro";
 import Title from "@atoms/Title/Title";
-import Header from "@molecules/Header/Header.astro";
+
 ---
 <Layout>
-    <BackgroundGradient>
-        <Header/>
 
-    </BackgroundGradient>
+    <BackgroundGradient/>
+
     <section class="about">
 
     </section>
