--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./mixins";
 @import "@layouts/BackgroundGradient/background-gradient";
 @import "@molecules/Header/header";
+@import "@atoms/hamburgerBtn/hamburger";
 
 
 
