--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,8 +2,8 @@
 @import "@atoms/Title/title";
 @import "./mixins";
 @import "@layouts/BackgroundGradient/background-gradient";
-@import "@molecules/Header/header";
-@import "@atoms/hamburgerBtn/hamburger";
+@import "@organisms/Header/header";
+
 
 
 
