--- a/src/components/atoms/ThemeIcon.astro
+++ b/src/components/atoms/ThemeIcon.astro
@@ -24,7 +24,6 @@
   const handleToggleClick = () => {
     const element = document.documentElement;
     element.classList.toggle("dark");
-
     const isDark = element.classList.contains("dark");
     localStorage.setItem("theme", isDark ? "dark" : "light");
   };
@@ -32,15 +31,16 @@
   document
     .getElementById("themeToggle")
     .addEventListener("click", handleToggleClick);
+
 </script>
 
-<button id="themeToggle" class="fixed top-[92%] left-5 z-20">
+<button id="themeToggle">
   <iconify-icon
     class="sun"
-    icon="ant-design:sun-filled"
-    width="28"
-    height="28"
-    style="color: #38489b"></iconify-icon>
+    icon="line-md:sun-rising-loop"
+    width="32"
+    height="32"
+    style="color: #ad8700"></iconify-icon>
   <iconify-icon
     class="moon"
     icon="line-md:moon-loop"
@@ -49,14 +49,27 @@
     style="color: #00ffff"></iconify-icon>
 </button>
 
-<style>
+<style lang="scss">
+  @use "@sass/variables" as v;
   #themeToggle {
-    border: 0;
-    background: none;
+    display: grid;
+    place-content: center;
+    width: 50px;
+    height: 50px;
     position: fixed;
-    top: 90%;
-    left: calc(90% - 10px);
+    margin-right: 3rem;
+    top: 86%;
+    right: 0;
+    border-radius: 50%;
+    border: 2px solid v.$french-violet;
+    background: rgba(29, 29, 29, 0.121);
+    backdrop-filter: blur(30px);
+    cursor: pointer;
     z-index: 30;
+    transition: transform 0.3s ease-in-out;
+  }
+  #themeToggle:active {
+    transform: scale(0.5);
   }
   .sun {
     display: block;
@@ -71,4 +84,5 @@
   :global(.dark) .moon {
     display: block;
   }
+
 </style>
