--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,13 @@
 import BackgroundGradient from "@src/layouts/BackgroundGradient/BackgroundGradient.astro";
 import Layout from "../layouts/Layout.astro";
 import Title from "@atoms/Title/Title";
+import Hero from "@src/components/organisms/Hero/Hero.astro";
 
 ---
 <Layout>
 
     <BackgroundGradient/>
-
+    <Hero/>
     <section class="about">
 
     </section>
