🚧 Se refactoriza codigo
Se modularizan las funciones en CONTROLLERS, se agrega función para shuffle al hacer click. Se agrega tema oscuro al gradiente. Se refactoriza la forma en que se renderiza la imagen de perfil dependiendo si es dark o ligth  mediante template strings

--- a/src/components/molecules/Header/Header.astro
+++ b/src/components/molecules/Header/Header.astro
@@ -5,7 +5,7 @@ import HamburgerButton from "@atoms/hamburgerBtn/HamburgerBtn.astro";
 ---
 
 <script>
-import "@controllers/hamburger.js";
+import "@src/controllers/hamburger.controller.js";
 </script>
 
 <header class="header">
