--- a/src/components/organisms/Hero/_hero.scss
+++ b/src/components/organisms/Hero/_hero.scss
@@ -1,50 +1,34 @@
+@import "@atoms/ProfilePicture/profile-picture";
 .hero {
   width: 100%;
   min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 2rem;
 }
 .hero__container {
   @include centerFlex(space-evenly);
   gap: 10rem;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   width: 100%;
   max-width: 1300px;
 }
-.hero__content{
-    @include centerFlex(flex-start);
-    flex-direction: column;
-    .hero__title{
-        color: white;
-        font-size: 9.5rem;
-        }
-        span:hover{
-            color:aqua;
-        }
-        .hero__slogan{
-            color: v.$ufo-green;
-            font-size: 2rem;
-        }
+.hero__content {
+  @include centerFlex(flex-start);
+  flex-direction: column;
+  .hero__title {
+    color: white;
+    font-size: 7rem;
+    @include respond-to("medium") {
+      font-size: 5.8rem;
     }
-
-
-
-.image__container {
-  width: 34rem;
-  height: 34rem;
-}
-.hero__img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-.hero-profile-img {
-  background: url("public/img/sofi-pic-1.webp");
-  background-size: cover;
-}
-
-.dark .hero-profile-img {
-  background: url("public/img/sofi-pic-2.webp");
-  background-size: cover;
+  }
+  span:hover {
+    color: aqua;
+  }
+  .hero__slogan {
+    color: v.$ufo-green;
+    font-size: 2rem;
+  }
 }
