--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,42 +7,42 @@ $aqua: #58ECFF;
 $bg-image: linear-gradient(to bottom, #2f0569, #28075e, #220753, #1d0749, #18063e, #160439, #150235, #140030, #140030, #140030, #140030, #140030);
 
 /*Gradiente Ligth mode   */
-/* $color-background-body-ligth: #292929;
-$color-background-before-ligth: #3e53cd87;
-$color-gradient1-start-ligth: rgba(7, 79, 133, 0.066);
-$color-gradient1-end-ligth: rgba(92, 201, 241, 0.106);
-$color-gradient2-start-ligth: rgba(26, 171, 244, 0.199);
-$color-gradient2-middle-ligth: rgba(3, 108, 147, 0.13);
-$color-gradient2-end-ligth: rgba(134, 184, 215, 0.172);
-$color-gradient3-start-ligth: rgba(51, 54, 145, 0.13);
-$color-gradient3-middle-ligth: rgba(19, 146, 220, 0.033);
-$color-gradient3-end-ligth: rgba(54, 155, 199, 0);
-$color-gradient4-start-ligth: rgba(39, 155, 232, 0.087);
-$color-gradient4-end-ligth: rgba(21, 86, 161, 0.05);
-$color-background-gradient5-ligth: #87a9dc57;
-$color-gradient6-start-ligth: rgba(40, 123, 218, 0.044);
-$color-background-gradient6-ligth: #e7ecf7;
-$color-background-after-ligth: #c4d0e6dc; */
+$color-background-body-ligth: #06080c;
+$color-background-before-ligth: #090c12;
+$color-gradient1-start-ligth: rgba(121, 26, 244, 0.3);
+$color-gradient1-end-ligth: rgba(50, 0, 124, 0);
+$color-gradient2-start-ligth: rgba(117, 26, 244, 0.5);
+$color-gradient2-middle-ligth: rgba(48, 0, 124, 0.4);
+$color-gradient2-end-ligth: rgba(50, 0, 124, 0);
+$color-gradient3-start-ligth: rgba(142, 26, 244, 0.2);
+$color-gradient3-middle-ligth: rgba(58, 0, 124, 0.1);
+$color-gradient3-end-ligth: rgba(54, 0, 124, 0);
+$color-gradient4-start-ligth: rgba(52, 0, 124, 0.075);
+$color-gradient4-end-ligth: rgba(52, 0, 124, 0.05);
+$color-background-gradient5-ligth: #100d17;
+$color-gradient6-start-ligth: rgba(102, 40, 218, 0.5);
+$color-background-gradient6-ligth: #110d17;
+$color-background-after-ligth: #18131c;
 
 
 
 /*Gradiente dark mode   */
 $color-background-body: #06080c;
 $color-background-before: #090c12;
-$color-gradient1-start: rgba(142, 26, 244, 0.3);
-$color-gradient1-end: rgba(50, 0, 124, 0);
-$color-gradient2-start: rgba(135, 26, 244, 0.5);
-$color-gradient2-middle: rgba(74, 0, 124, 0.4);
-$color-gradient2-end: rgba(78, 0, 124, 0);
-$color-gradient3-start: rgba(142, 26, 244, 0.2);
+$color-gradient1-start: rgba(17, 3, 40, 0.3);
+$color-gradient1-end: rgba(8, 4, 16, 0);
+$color-gradient2-start: rgba(131, 66, 244, 0.632);
+$color-gradient2-middle: rgba(8, 13, 28, 0.4);
+$color-gradient2-end: rgba(3, 91, 159, 0);
+$color-gradient3-start: rgba(13, 12, 26, 0.2);
 $color-gradient3-middle: rgba(70, 0, 124, 0.1);
-$color-gradient3-end: rgba(56, 0, 124, 0);
-$color-gradient4-start: rgba(52, 0, 124, 0.075);
+$color-gradient3-end: rgba(0, 0, 124, 0);
+$color-gradient4-start: rgba(68, 0, 124, 0.075);
 $color-gradient4-end: rgba(70, 0, 124, 0.05);
 $color-background-gradient5: #100d17;
-$color-gradient6-start: rgba(129, 40, 218, 0.5);
-$color-background-gradient6: #110d17;
-$color-background-after: #18131c;
+$color-gradient6-start: rgba(41, 10, 151, 0.462);
+$color-background-gradient6: #0e0d17;
+$color-background-after: #13131c;
 
 
 /* Gradientes del texto */
