--- a/src/components/atoms/ThemeIcon.astro
+++ b/src/components/atoms/ThemeIcon.astro
@@ -1,37 +1,7 @@
 ---
-
 ---
-
 <script>
-  const theme = (() => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
-    }
-    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-      return "dark";
-    }
-    return "light";
-  })();
-
-  if (theme === "light") {
-    document.documentElement.classList.remove("dark");
-  } else {
-    document.documentElement.classList.add("dark");
-  }
-
-  window.localStorage.setItem("theme", theme);
-
-  const handleToggleClick = () => {
-    const element = document.documentElement;
-    element.classList.toggle("dark");
-    const isDark = element.classList.contains("dark");
-    localStorage.setItem("theme", isDark ? "dark" : "light");
-  };
-
-  document
-    .getElementById("themeToggle")
-    .addEventListener("click", handleToggleClick);
-
+  import { theme } from "@src/controllers/themeToggle.controller";
 </script>
 
 <button id="themeToggle">
@@ -84,5 +54,4 @@
   :global(.dark) .moon {
     display: block;
   }
-
 </style>
