--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,7 +3,8 @@
 @import "./mixins";
 @import "@sass/functions";
 @import "@layouts/BackgroundGradient/background-gradient";
-@import "@organisms/Header/header";
+
+@import "@molecules/Header/header";
 @import "@organisms/Hero/hero";
 
 
@@ -25,8 +26,8 @@ html {
  body {
    overflow-x: hidden;
    @include font-family("montserrat");
-   background: v.$mainColor;
    color: v.$mainColor;
+   background: v.$mainColor;
   }
 
   .dark body{
