--- a/src/components/molecules/Header/_header.scss
+++ b/src/components/molecules/Header/_header.scss
@@ -38,7 +38,7 @@
   .header__link {
     font-weight: bold;
     &:hover {
-      color: v.$ufo-green;
+      @include text-gradient("ligth");
     }
   }
   .header__link {
