--- a/src/components/organisms/Hero/Hero.astro
+++ b/src/components/organisms/Hero/Hero.astro
@@ -9,7 +9,9 @@ import { userData as data } from "@src/data/userData";
   <div class="hero__container">
     <div class="hero__content">
       <h1 class="hero__title">Hi! I'm {data.name}<span>{data.lastName}</span>🦝</h1>
-      <p class="hero__slogan">{data.sloganHero1}</p>
+      <div class="text__container">
+        <p class="hero__slogan">≥{data.sloganHero1}</p>
+      </div>
       <!-- redes sociales -->
     </div>
     <ProfilePicture/>
