--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,8 +2,8 @@
 @import "@atoms/Title/title";
 @import "./mixins";
 @import "@sass/functions";
+@import "@sass/animations";
 @import "@layouts/BackgroundGradient/background-gradient";
-
 @import "@molecules/Header/header";
 @import "@organisms/Hero/hero";
 
