--- a/src/components/atoms/Logo/_logo.scss
+++ b/src/components/atoms/Logo/_logo.scss
@@ -5,6 +5,9 @@
   .logo:hover span{
     color:aqua;
   }
+  .dark .logo span{
+    color: aqua;
+  }
   .logo__img {
     max-width: 4.5rem;
     flex-basis: 10%;
