--- a/src/components/atoms/ProfilePicture/_profile-picture.scss
+++ b/src/components/atoms/ProfilePicture/_profile-picture.scss
@@ -94,6 +94,9 @@
     left: -8%;
   }
   .skill-6{
+  //   animation: from-left 1s ease-in-out forwards;
+  // animation-delay:.1s;
+  //   transform: translateX(-600px) scale(6.2);
     bottom: 64%;
     right: 78%;
   }
