--- a/src/components/organisms/Hero/Hero.astro
+++ b/src/components/organisms/Hero/Hero.astro
@@ -1,5 +1,6 @@
 ---
 import ProfilePicture from "@src/components/atoms/ProfilePicture/ProfilePicture.astro";
+import SocialIcons from "@src/components/atoms/SocialIcons/SocialIcons.astro";
 import { userData as data } from "@src/data/userData";
 ---
 
@@ -12,7 +13,9 @@ import { userData as data } from "@src/data/userData";
       <div class="text__container">
         <p class="hero__slogan">≥{data.sloganHero1}</p>
       </div>
-      <!-- redes sociales -->
+      <div class="container__icons">
+        <SocialIcons/>
+      </div>
     </div>
     <ProfilePicture/>
   </div>
